--- a/src/common/components/deck/_index.scss
+++ b/src/common/components/deck/_index.scss
@@ -73,7 +73,7 @@
 }
 
 .item-container {
-  max-height: 70vh;
+  max-height: calc(100vh - 176px);
   overflow: auto;
 }
 
